--- a/src/pug/1-1otdel.pug
+++ b/src/pug/1-1otdel.pug
@@ -4,6 +4,7 @@ block title
 	title Отделения внутренняя
 block config
 	- var main = false
+	- var parse = true
 block content
 	.wrapper.gray.page-head
 		.box
@@ -326,6 +327,23 @@ block content
 											]	
 										},
 									],
+									'activeLetters':[
+										{
+											'letter': 'а'
+										},
+										{
+											'letter': 'д'
+										},
+										{
+											'letter': 'м'
+										},
+										{
+											'letter': 'р'
+										},
+										{
+											'letter': 'з'
+										},
+									]
 								};
 							.service-items
 
