--- a/src/pug/3-1vrach.pug
+++ b/src/pug/3-1vrach.pug
@@ -4,6 +4,7 @@ block title
 	title Ирина Владимировна Мусатова
 block config
 	- var main = false
+	- var parse = true
 block content
 	.wrapper.gray.page-head
 		.box
@@ -133,61 +134,309 @@ block content
 									each letter in letters
 										.service-letter.js-filter-letter(data-letter=letter)
 											.service-letter-inner= letter
+							script.
+								var elems = {
+									'section': [
+										{
+											'id': 1,
+											'name': null,
+											'link': '#',
+											'subsection' :[
+												{
+													'name': null,
+													'link': '#',
+													'letters': [
+														{
+															'letter': 'а',
+															'items': [
+																{
+																	'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+																	'link': '#',
+																},
+																{
+																	'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+																	'link': '#',
+																},
+																{
+																	'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+																	'link': '#',
+																},
+																{
+																	'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+																	'link': '#',
+																},
+																{
+																	'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+																	'link': '#',
+																},
+																{
+																	'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+																	'link': '#',
+																},
+																{
+																	'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+																	'link': '#',
+																},
+															]
+														},
+														{
+															'letter': 'д',
+															'items': [
+																{
+																	'name': 'Дуплексное сканирование брахиоцефальных артерий на экстракраниальном уровне',
+																	'link': '#',
+																},
+																{
+																	'name': 'Доплерография сосудов почек',
+																	'link': '#',
+																},
+																{
+																	'name': 'Доплерография сосудов щитовидной железы',
+																	'link': '#',
+																},
+																{
+																	'name': 'Доплерография сосудов органов малого таза',
+																	'link': '#',
+																},
+																{
+																	'name': 'Доплерография сосудов внутренних органов',
+																	'link': '#',
+																},
+																{
+																	'name': 'Доплерография сосудов матки, пуповины и плода при беременности',
+																	'link': '#',
+																},
+																{
+																	'name': 'Дуплексное сканирование артерий верхних конечностей',
+																	'link': '#',
+																},
+																{
+																	'name': 'Дуплексное сканирование вен нижних конечностей',
+																	'link': '#',
+																},
+																{
+																	'name': 'Дуплексное сканирование артерий нижних конечностей',
+																	'link': '#',
+																},
+																{
+																	'name': 'Дуплексное сканирование интракраниальных артерий',
+																	'link': '#',
+																},
+																{
+																	'name': 'Доплерография сосудов органов малого таза',
+																	'link': '#',
+																},
+																{
+																	'name': 'Доплерография сосудов внутренних органов',
+																	'link': '#',
+																},
+																{
+																	'name': 'Доплерография сосудов матки, пуповины и плода при беременности',
+																	'link': '#',
+																},
+															]
+														},
+														{
+															'letter': 'м',
+															'items': [
+																{
+																	'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография всего позвоночника (всех отделов)',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография головного мозга',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография всего позвоночника (всех отделов)',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография головного мозга',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография грудного отдела позвоночника',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография мышц',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография одного голеностопного сустава',
+																	'link': '#',
+																},
+															]
+														},
+														{
+															'letter': 'р',
+															'items': [
+																{
+																	'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография всего позвоночника (всех отделов)',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография головного мозга',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография всего позвоночника (всех отделов)',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография головного мозга',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография грудного отдела позвоночника',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография мышц',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография одного голеностопного сустава',
+																	'link': '#',
+																},
+															]
+														},
+														{
+															'letter': 'з',
+															'items': [
+																{
+																	'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография всего позвоночника (всех отделов)',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография головного мозга',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография всего позвоночника (всех отделов)',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография головного мозга',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография грудного отдела позвоночника',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография мышц',
+																	'link': '#',
+																},
+																{
+																	'name': 'Магнитно-резонансная томография одного голеностопного сустава',
+																	'link': '#',
+																},
+															]
+														},
+													]
+												}
+											]	
+										},
+									],
+									'activeLetters':[
+										{
+											'letter': 'а'
+										},
+										{
+											'letter': 'д'
+										},
+										{
+											'letter': 'м'
+										},
+										{
+											'letter': 'р'
+										},
+										{
+											'letter': 'з'
+										},
+									]
+								};
 							.service-items
-								.service-item
-									//- .service-item-title
-									//- 	.title.h2 Клинико-диагностическая лаборатория
-									.service-item-container
-										.service-item-item
-											.service-item-letter
-												|A
-											ul.service-item-links
-												li
-													a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
-												li
-													a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
-												li
-													a(href="#").text Аэрозольтерапия Вентолином через небулайзер
-												li
-													a(href="#").text Акустическая терапия почек и верхних мочевых путей
-												li
-													a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
-										.service-item-item
-											.service-item-letter
-												|Д
-											ul.service-item-links
-												li
-													a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
-												li
-													a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
-												li
-													a(href="#").text Аэрозольтерапия Вентолином через небулайзер
-												li
-													a(href="#").text Акустическая терапия почек и верхних мочевых путей
-												li
-													a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
-										.service-item-item
-											.service-item-letter
-												|М
-											ul.service-item-links
-												li
-													a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
-												li
-													a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
-												li
-													a(href="#").text Аэрозольтерапия Вентолином через небулайзер
-												li
-													a(href="#").text Акустическая терапия почек и верхних мочевых путей
-												li
-													a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
-												li
-													a(href="#").text Магнитно-резонансная ангиография интракраниальных сосудов
-												li
-													a(href="#").text Магнитно-резонансная томография всего позвоночника (всех отделов)
-												li
-													a(href="#").text Магнитно-резонансная томография головного мозга
-									.btn.light.js-expand
-										span Смотреть все 118 услуг
+								//- .service-item
+								//- 	//- .service-item-title
+								//- 	//- 	.title.h2 Клинико-диагностическая лаборатория
+								//- 	.service-item-container
+								//- 		.service-item-item
+								//- 			.service-item-letter
+								//- 				|A
+								//- 			ul.service-item-links
+								//- 				li
+								//- 					a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
+								//- 				li
+								//- 					a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
+								//- 				li
+								//- 					a(href="#").text Аэрозольтерапия Вентолином через небулайзер
+								//- 				li
+								//- 					a(href="#").text Акустическая терапия почек и верхних мочевых путей
+								//- 				li
+								//- 					a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
+								//- 		.service-item-item
+								//- 			.service-item-letter
+								//- 				|Д
+								//- 			ul.service-item-links
+								//- 				li
+								//- 					a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
+								//- 				li
+								//- 					a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
+								//- 				li
+								//- 					a(href="#").text Аэрозольтерапия Вентолином через небулайзер
+								//- 				li
+								//- 					a(href="#").text Акустическая терапия почек и верхних мочевых путей
+								//- 				li
+								//- 					a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
+								//- 		.service-item-item
+								//- 			.service-item-letter
+								//- 				|М
+								//- 			ul.service-item-links
+								//- 				li
+								//- 					a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
+								//- 				li
+								//- 					a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
+								//- 				li
+								//- 					a(href="#").text Аэрозольтерапия Вентолином через небулайзер
+								//- 				li
+								//- 					a(href="#").text Акустическая терапия почек и верхних мочевых путей
+								//- 				li
+								//- 					a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
+								//- 				li
+								//- 					a(href="#").text Магнитно-резонансная ангиография интракраниальных сосудов
+								//- 				li
+								//- 					a(href="#").text Магнитно-резонансная томография всего позвоночника (всех отделов)
+								//- 				li
+								//- 					a(href="#").text Магнитно-резонансная томография головного мозга
+								//- 	.btn.light.js-expand
+								//- 		span Смотреть все 118 услуг
 	.wrapper
 		.box
 			.aside-wrapp
