--- a/src/pug/4-0contact.pug
+++ b/src/pug/4-0contact.pug
@@ -60,7 +60,7 @@ block content
 
 	.wrapper.map-wrapper
 		.map-cont
-			#map.map-element(data-lat='55.749327',data-lon='37.590710',data-icon='/img/point.png')
+			#map.map-element(data-lat='55.749327',data-lon='37.590710',data-icon='/img/pin.png')
 		.map-img
 			.map-img-inner(data-src='img/index/clinic.jpg').js-image.bg 
 
