--- a/src/pug/includes/_header.pug
+++ b/src/pug/includes/_header.pug
@@ -38,7 +38,7 @@ include _mixins.pug
 								a(href="#").spec-link
 									.spec-link-title.dropdown Записаться online
 									.text Записаться на прием самостоятельно, выбрав врача и удобное время в личном кабинете
-								.spec-link.js-popup-button(data-modal='zayavka')
+								.spec-link.js-popup-button(data-modal='callback')
 									.spec-link-title.dropdown Оставить заявку
 									.text Оставить заявку на приём через форму на сайте (вам перезвонят, чтобы уточнить детали)
 
@@ -195,7 +195,7 @@ include _mixins.pug
 						.tel-item
 							.text-sm Стоматология
 							a(href="tel:84959561767").tel-item-tel 8 (495) 956-60-95
-					.link.js-popup-buttom(data-modal='callback') Обратный звонок
+					.link.js-popup-button(data-modal='callback') Обратный звонок
 					.time-blk
 						.text-sm Режим работы
 						span Пн–Сб: 8:30–21:00
