--- a/src/pug/map.pug
+++ b/src/pug/map.pug
@@ -5,10 +5,10 @@
 			.big-image-slider-inner
 				.big-image-item
 					.big-image-item-inner
-						img(src="/img/info.png", alt="")
+						img(src="/img/roadmap/info1.jpg", alt="")
 				.big-image-item
 					.big-image-item-inner
-						img(src="/img/info.png", alt="")
+						img(src="/img/roadmap/info2.jpg", alt="")
 		.modal-container-content
 			.modal-container-slider
 				.modal-container-arrows
