--- a/bitrix/templates/main/diplom.html
+++ b/bitrix/templates/main/diplom.html
@@ -4,13 +4,13 @@
     <div class="big-image-slider">
       <div class="big-image-slider-inner">
         <div class="big-image-item">
-          <div class="big-image-item-inner"><img src="/img/big.png" alt=""/></div>
+          <div class="big-image-item-inner"><img src="/img/big.png" alt=""></div>
         </div>
         <div class="big-image-item">
-          <div class="big-image-item-inner"><img src="/img/index/1.jpg" alt=""/></div>
+          <div class="big-image-item-inner"><img src="/img/index/1.jpg" alt=""></div>
         </div>
         <div class="big-image-item">
-          <div class="big-image-item-inner"><img src="/img/big.png" alt=""/></div>
+          <div class="big-image-item-inner"><img src="/img/big.png" alt=""></div>
         </div>
       </div>
     </div>
@@ -39,8 +39,8 @@
                       .stpdf2{font-size:8.5213px;}
                     </style>
                     <g>
-                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"></path>
-                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"></polyline>
+                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"/>
+                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"/>
                       <text class="stpdf1 stpdf2" transform="matrix(1.1391 0 0 1 3.6906 25.6917)">PDF</text>
                     </g>
                   </svg>
@@ -52,13 +52,13 @@
                 <div class="download-link-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25px" height="20px" viewbox="0 0 292 271">
                     <defs>
-                      <path id="ap" d="M0 0h292v271H0z"></path>
+                      <path id="ap" d="M0 0h292v271H0z"/>
                     </defs>
                     <clippath>
-                      <use xlink:href="#a" overflow="visible"></use>
+                      <use xlink:href="#a" overflow="visible"/>
                     </clippath>
-                    <path fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" d="M61 186H22.6C12.9 186 5 178.1 5 168.4V56.6C5 46.9 12.9 39 22.6 39h246.9c9.7 0 17.6 7.9 17.6 17.6v111.9c0 9.7-7.9 17.6-17.6 17.6H231M50 5h192v34H50z" clip-path="url(#b)"></path>
-                    <path fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" d="M61 119h170v147H61z" clip-path="url(#bp)"></path>
+                    <path fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" d="M61 186H22.6C12.9 186 5 178.1 5 168.4V56.6C5 46.9 12.9 39 22.6 39h246.9c9.7 0 17.6 7.9 17.6 17.6v111.9c0 9.7-7.9 17.6-17.6 17.6H231M50 5h192v34H50z" clip-path="url(#b)"/>
+                    <path fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" d="M61 119h170v147H61z" clip-path="url(#bp)"/>
                   </svg>
                 </div>
                 <div class="download-link-text">
@@ -76,8 +76,8 @@
                       .stpdf2{font-size:8.5213px;}
                     </style>
                     <g>
-                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"></path>
-                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"></polyline>
+                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"/>
+                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"/>
                       <text class="stpdf1 stpdf2" transform="matrix(1.1391 0 0 1 3.6906 25.6917)">PDF</text>
                     </g>
                   </svg>
@@ -89,13 +89,13 @@
                 <div class="download-link-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="20px" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 292 271">
                     <defs>
-                      <path id="ap" d="M0 0h292v271H0z"></path>
+                      <path id="ap" d="M0 0h292v271H0z"/>
                     </defs>
                     <clippath>
-                      <use xlink:href="#a" overflow="visible"></use>
+                      <use xlink:href="#a" overflow="visible"/>
                     </clippath>
-                    <path fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" d="M61 186H22.6C12.9 186 5 178.1 5 168.4V56.6C5 46.9 12.9 39 22.6 39h246.9c9.7 0 17.6 7.9 17.6 17.6v111.9c0 9.7-7.9 17.6-17.6 17.6H231M50 5h192v34H50z" clip-path="url(#b)"></path>
-                    <path fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" d="M61 119h170v147H61z" clip-path="url(#bp)"></path>
+                    <path fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" d="M61 186H22.6C12.9 186 5 178.1 5 168.4V56.6C5 46.9 12.9 39 22.6 39h246.9c9.7 0 17.6 7.9 17.6 17.6v111.9c0 9.7-7.9 17.6-17.6 17.6H231M50 5h192v34H50z" clip-path="url(#b)"/>
+                    <path fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" d="M61 119h170v147H61z" clip-path="url(#bp)"/>
                   </svg>
                 </div>
                 <div class="download-link-text">
@@ -113,8 +113,8 @@
                       .stpdf2{font-size:8.5213px;}
                     </style>
                     <g>
-                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"></path>
-                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"></polyline>
+                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"/>
+                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"/>
                       <text class="stpdf1 stpdf2" transform="matrix(1.1391 0 0 1 3.6906 25.6917)">PDF</text>
                     </g>
                   </svg>
@@ -126,13 +126,13 @@
                 <div class="download-link-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="20px" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 292 271">
                     <defs>
-                      <path id="ap" d="M0 0h292v271H0z"></path>
+                      <path id="ap" d="M0 0h292v271H0z"/>
                     </defs>
                     <clippath>
-                      <use xlink:href="#a" overflow="visible"></use>
+                      <use xlink:href="#a" overflow="visible"/>
                     </clippath>
-                    <path fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" d="M61 186H22.6C12.9 186 5 178.1 5 168.4V56.6C5 46.9 12.9 39 22.6 39h246.9c9.7 0 17.6 7.9 17.6 17.6v111.9c0 9.7-7.9 17.6-17.6 17.6H231M50 5h192v34H50z" clip-path="url(#b)"></path>
-                    <path fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" d="M61 119h170v147H61z" clip-path="url(#bp)"></path>
+                    <path fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" d="M61 186H22.6C12.9 186 5 178.1 5 168.4V56.6C5 46.9 12.9 39 22.6 39h246.9c9.7 0 17.6 7.9 17.6 17.6v111.9c0 9.7-7.9 17.6-17.6 17.6H231M50 5h192v34H50z" clip-path="url(#b)"/>
+                    <path fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" d="M61 119h170v147H61z" clip-path="url(#bp)"/>
                   </svg>
                 </div>
                 <div class="download-link-text">
