--- a/bitrix/templates/main/diplom2.html
+++ b/bitrix/templates/main/diplom2.html
@@ -4,16 +4,16 @@
     <div class="big-image-slider">
       <div class="big-image-slider-inner">
         <div class="big-image-item">
-          <div class="big-image-item-inner"><img src="/img/big.png" alt=""/></div>
+          <div class="big-image-item-inner"><img src="/img/big.png" alt=""></div>
         </div>
         <div class="big-image-item">
-          <div class="big-image-item-inner"><img src="/img/index/1.jpg" alt=""/></div>
+          <div class="big-image-item-inner"><img src="/img/index/1.jpg" alt=""></div>
         </div>
         <div class="big-image-item">
-          <div class="big-image-item-inner"><img src="/img/big.png" alt=""/></div>
+          <div class="big-image-item-inner"><img src="/img/big.png" alt=""></div>
         </div>
         <div class="big-image-item">
-          <div class="big-image-item-inner"><img src="/img/big.png" alt=""/></div>
+          <div class="big-image-item-inner"><img src="/img/big.png" alt=""></div>
         </div>
       </div>
     </div>
@@ -42,8 +42,8 @@
                       .stpdf2{font-size:8.5213px;}
                     </style>
                     <g>
-                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"></path>
-                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"></polyline>
+                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"/>
+                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"/>
                       <text class="stpdf1 stpdf2" transform="matrix(1.1391 0 0 1 3.6906 25.6917)">PDF</text>
                     </g>
                   </svg>
@@ -64,8 +64,8 @@
                       .stpdf2{font-size:8.5213px;}
                     </style>
                     <g>
-                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"></path>
-                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"></polyline>
+                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"/>
+                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"/>
                       <text class="stpdf1 stpdf2" transform="matrix(1.1391 0 0 1 3.6906 25.6917)">PDF</text>
                     </g>
                   </svg>
@@ -86,8 +86,8 @@
                       .stpdf2{font-size:8.5213px;}
                     </style>
                     <g>
-                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"></path>
-                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"></polyline>
+                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"/>
+                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"/>
                       <text class="stpdf1 stpdf2" transform="matrix(1.1391 0 0 1 3.6906 25.6917)">PDF</text>
                     </g>
                   </svg>
@@ -108,8 +108,8 @@
                       .stpdf2{font-size:8.5213px;}
                     </style>
                     <g>
-                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"></path>
-                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"></polyline>
+                      <path class="stpdf0" d="M20.7,31.1H2.3c-0.8,0-1.5-0.7-1.5-1.5V2.3c0-0.8,0.7-1.5,1.5-1.5h9.7c0.4,0,0.8,0.2,1.1,0.4l8.8,8.8											c0.3,0.3,0.4,0.7,0.4,1.1v18.6C22.2,30.4,21.5,31.1,20.7,31.1z"/>
+                      <polyline class="stpdf0" points="12.6,0.8 12.6,10.4 22.2,10.4 	"/>
                       <text class="stpdf1 stpdf2" transform="matrix(1.1391 0 0 1 3.6906 25.6917)">PDF</text>
                     </g>
                   </svg>
