--- a/src/pug/includes/_footer.pug
+++ b/src/pug/includes/_footer.pug
@@ -85,7 +85,7 @@
 				.tel-item
 					.text-sm Стоматология
 					a(href="tel:84959566095").tel-item-tel 8 (495) 956-60-95
-			.link.js-popup-buttom(data-modal='callback') Обратный звонок
+			.link.js-popup-button(data-modal='callback') Обратный звонок
 			.time-blk
 				span Пн–Сб: 8:30–21:00
 				span Вс: 9:00–20:00
