--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -130,7 +130,6 @@ body, .out
 		justify-content: space-between
 		align-items: center
 		position: relative
-		visibility: visible
 		+tr(transform .3s)
 	&__footer
 		position: relative
@@ -305,6 +304,47 @@ body, .out
 
 
 .footer
+	&.eng 
+		.logo-wrap,.footer-links-main
+			+rm(740)
+				width: 15%
+		.footer-links-main
+			+r(740)
+				display: none
+		.search-wrap
+			+r(740)
+				order: 3
+				position: static
+		.footer-right
+			+r(600)
+				+rem(width,170px)
+		.footer-left
+			+r(600)
+				width: calc(100% - 10.625rem)
+		.footer-links-add
+			+rm(740)
+				width: 60%
+			&:last-child
+				+r(740)
+					display: inline-block
+					width: 100% !important
+					max-width: 100%
+					
+		.time-blk
+			+rem(margin-bottom,30px)
+			span 
+				+rem(margin-top,10px)
+		.tel-wrap
+			+rem(margin-top,40px)
+			+r(600)
+				+rem(margin-top,90px)
+		.btn-wrap
+			+rem(margin-top,10px)
+			.text-sm
+				line-height: 1.5
+		.footer-footer-dev
+			+rm(701)
+				width: 66.66%
 	.box
 		font-size: 0
 		+rem(padding-top,47px)
@@ -716,7 +756,8 @@ body, .out
 		white-space: nowrap
 		&>div
 			white-space: normal
-			
+			.tel-item-tel
+				+rem(margin-top,10px)
 		.top-link.primary
 			border-radius: 3px
 			display: inline-block
@@ -935,6 +976,7 @@ body, .out
 	+tr(transform .3s ease-in-out)
 	position: relative
 	z-index: 0
+	visibility: visible
 	&:before
 		content: ''
 		+coverdiv
@@ -1361,6 +1403,21 @@ body, .out
 		+rem(padding-top,100px)
 	+r(820)
 		+rem(padding-top,77px)
+	&.eng
+		.page-head-inner
+			width: 40%
+			vertical-align: top
+			+r(780)
+				width: 100%
+		.page-head-text
+			width: 60%
+			vertical-align: top
+			+rem(padding-bottom,120px)
+			+rem(padding-top,90px)
+			+r(780)
+				width: 100%
+				+rem(padding-bottom,40px)
+				+rem(padding-top,20px)
 .index-slider
 	position: relative
 	+rem(margin-right,-100px)
@@ -2022,6 +2079,8 @@ body, .out
 		&-items
 			font-size: 0
 			+rem(padding-top,75px)
+
+						
 			+r(991)
 				+rem(padding-top,45px)	
 	&-img
@@ -2036,7 +2095,7 @@ body, .out
 		+rem(margin-bottom,60px)
 		+r(600)
 			+rem(margin-bottom,40px)
-			+rem(min-width,150px)
+			+rem(min-width,160px)
 		&-inner
 			display: block
 		&-num,&-text
@@ -2045,6 +2104,7 @@ body, .out
 			font-weight: 600
 			+rem(font-size,36px)
 			+rem(padding-bottom,16px)
+			white-space: nowrap
 .wide
 	&-slider
 		margin-right: -27vw
@@ -2658,12 +2718,19 @@ body, .out
 			+rem(margin-bottom,30px)
 		.btn 
 			width: 100%
+			&.hidden
+				display: none
 		&:not(:first-child)
 			+rem(margin-top,90px)
 			+r(1024)
 				+rem(margin-top,60px)
 			+r(600)
 				+rem(margin-top,30px)
+	&-items
+		&.blocks-hidden
+			.service-item-item
+				&:nth-child(n+4)
+					display: none
 	&-head
 		font-size: 0
 		+rem(margin-top,5px)
@@ -2693,6 +2760,7 @@ body, .out
 		.search-wrapper 
 			position: relative
 			+rem(margin-right,-10px)
+			+rem(margin-left,-10px)
 	&-letters
 		+rem(margin-top,25px)
 		+r(700)
@@ -2713,11 +2781,13 @@ body, .out
 			+rem(padding-top,30px)
 			+rem(padding-bottom,30px)
 		&.selected
-			color: color(textblk)
 			cursor: pointer
+			.service-letter-inner
+				color: color(textblk)
 			&.active
-				color: color(primary)
-		&:not(.selecte)
+				.service-letter-inner
+					color: color(primary)
+		&:not(.selected)
 			pointer-events: none
 
 	&-item
@@ -2736,6 +2806,8 @@ body, .out
 			flex-flow: row nowrap
 			align-items: stretch
 			+rem(margin-right,-30px)
+			&.hidden
+				display: none
 			&:not(:last-child)
 				+rem(margin-bottom,50px)
 		&-letter
@@ -2946,7 +3018,7 @@ body, .out
 	.about-about-items
 		padding-top: 0 !important
 		.about-item
-			+rem(max-width,150px)
+			+rem(max-width,160px)
 	&>img 
 		display: block
 		max-width: 100%
