zagl, email template

--- a/bitrix/templates/main/diplom.html
+++ b/bitrix/templates/main/diplom.html
@@ -1,16 +1,23 @@
 
 <div class="wrap">
-  <div class="modal-container"><i class="small-link pop-close closePopup"></i>
+  <div class="modal-container">
+    <i class="small-link pop-close closePopup"></i>
     <div class="big-image-slider">
       <div class="big-image-slider-inner">
         <div class="big-image-item">
-          <div class="big-image-item-inner"><img src="/img/big.png" alt=""></div>
+          <div class="big-image-item-inner">
+            <img src="/img/big.png" alt="">
+          </div>
         </div>
         <div class="big-image-item">
-          <div class="big-image-item-inner"><img src="/img/index/1.jpg" alt=""></div>
+          <div class="big-image-item-inner">
+            <img src="/img/index/1.jpg" alt="">
+          </div>
         </div>
         <div class="big-image-item">
-          <div class="big-image-item-inner"><img src="/img/big.png" alt=""></div>
+          <div class="big-image-item-inner">
+            <img src="/img/big.png" alt="">
+          </div>
         </div>
       </div>
     </div>
@@ -31,7 +38,8 @@
           <div class="modal-container-slider-item">
             <div class="title h3">Свидетельство</div>
             <div class="text">Свидетельство о внесении записи в Единый государственный реестр юридических лиц</div>
-            <div class="slide-links"><a class="download-link" href="#">
+            <div class="slide-links">
+              <a class="download-link" href="#">
                 <div class="download-link-icon">
                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="25px" viewbox="0 0 23 31.8" style="enable-background:new 0 0 23 31.8;" xml:space="preserve">
                     <style type="text/css">
@@ -48,7 +56,9 @@
                 <div class="download-link-text">
                   <div class="text primary">Скачать прайс-лист</div>
                   <div class="text">PDF, 675 Кб</div>
-                </div></a><a class="download-link print" href="#">
+                </div>
+              </a>
+              <a class="download-link print" href="#">
                 <div class="download-link-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25px" height="20px" viewbox="0 0 292 271">
                     <defs>
@@ -63,12 +73,15 @@
                 </div>
                 <div class="download-link-text">
                   <div class="text primary">Версия для печати</div>
-                </div></a></div>
+                </div>
+              </a>
+            </div>
           </div>
           <div class="modal-container-slider-item">
             <div class="title h3">Свидетельство</div>
             <div class="text">Свидетельство о внесении записи в Единый государственный реестр юридических лиц</div>
-            <div class="slide-links"><a class="download-link" href="#">
+            <div class="slide-links">
+              <a class="download-link" href="#">
                 <div class="download-link-icon">
                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="25px" viewbox="0 0 23 31.8" style="enable-background:new 0 0 23 31.8;" xml:space="preserve">
                     <style type="text/css">
@@ -85,7 +98,9 @@
                 <div class="download-link-text">
                   <div class="text primary">Скачать прайс-лист</div>
                   <div class="text">PDF, 675 Кб</div>
-                </div></a><a class="download-link print" href="#">
+                </div>
+              </a>
+              <a class="download-link print" href="#">
                 <div class="download-link-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="20px" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 292 271">
                     <defs>
@@ -100,12 +115,15 @@
                 </div>
                 <div class="download-link-text">
                   <div class="text primary">Версия для печати</div>
-                </div></a></div>
+                </div>
+              </a>
+            </div>
           </div>
           <div class="modal-container-slider-item">
             <div class="title h3">Свидетельство</div>
             <div class="text">Свидетельство о внесении записи в Единый государственный реестр юридических лиц</div>
-            <div class="slide-links"><a class="download-link" href="#">
+            <div class="slide-links">
+              <a class="download-link" href="#">
                 <div class="download-link-icon">
                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="25px" viewbox="0 0 23 31.8" style="enable-background:new 0 0 23 31.8;" xml:space="preserve">
                     <style type="text/css">
@@ -122,7 +140,9 @@
                 <div class="download-link-text">
                   <div class="text primary">Скачать прайс-лист</div>
                   <div class="text">PDF, 675 Кб</div>
-                </div></a><a class="download-link print" href="#">
+                </div>
+              </a>
+              <a class="download-link print" href="#">
                 <div class="download-link-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="20px" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 292 271">
                     <defs>
@@ -137,7 +157,9 @@
                 </div>
                 <div class="download-link-text">
                   <div class="text primary">Версия для печати</div>
-                </div></a></div>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
