--- a/bitrix/templates/main/map.html
+++ b/bitrix/templates/main/map.html
@@ -1,13 +1,18 @@
 
 <div class="wrap">
-  <div class="modal-container"><i class="small-link pop-close closePopup"></i>
+  <div class="modal-container">
+    <i class="small-link pop-close closePopup"></i>
     <div class="big-image-slider">
       <div class="big-image-slider-inner">
         <div class="big-image-item">
-          <div class="big-image-item-inner"><img src="/img/roadmap/info1.jpg" alt=""></div>
+          <div class="big-image-item-inner">
+            <img src="/img/roadmap/info1.jpg" alt="">
+          </div>
         </div>
         <div class="big-image-item">
-          <div class="big-image-item-inner"><img src="/img/roadmap/info2.jpg" alt=""></div>
+          <div class="big-image-item-inner">
+            <img src="/img/roadmap/info2.jpg" alt="">
+          </div>
         </div>
       </div>
     </div>
