--- a/bitrix/templates/main/css/screen.css
+++ b/bitrix/templates/main/css/screen.css
@@ -4857,29 +4857,135 @@ a.text:active {
       transition: color 0.3s; }
   .addnews-item .news-item-image-inner {
     max-width: 12.5rem; }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+
+.main-wrapper {
+  display: table;
+  width: 100%;
+  min-height: 100%;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  z-index: -1; }
+  .main-wrapper-body {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    width: 100%;
+    min-height: 100%;
+    z-index: -1; }
+  .main-wrapper-content {
+    display: table-row;
+    height: 100%;
+    text-align: center;
+    position: relative;
+    z-index: 3; }
+    .main-wrapper-content .title {
+      font-size: 36px; }
+    .main-wrapper-content .text {
+      font-size: 14px;
+      line-height: 1.4;
+      margin: 20px 0; }
+  .main-wrapper-content-inner, .main-wrapper-footer-inner {
+    position: relative;
+    z-index: 3; }
+  .main-wrapper-logo {
+    margin: 60px 0 65px; }
+    .main-wrapper-logo a {
+      display: inline-block; }
+      .main-wrapper-logo a img {
+        max-width: 170px; }
+  .main-wrapper-text {
+    max-width: 760px;
+    margin: 65px auto 70px;
+    padding: 0 10px; }
+    .main-wrapper-text .title {
+      max-width: 650px;
+      margin: 0 auto 40px; }
+  .main-wrapper-links {
+    max-width: 900px;
+    padding: 0 10px;
+    width: 100%;
+    margin: 70px auto 90px;
+    font-size: 0;
+    *zoom: 1; }
+    .main-wrapper-links:after {
+      content: " ";
+      display: table;
+      clear: both; }
+    .main-wrapper-links:hover .main-wrapper-item:not(:hover) {
+      opacity: 0.6; }
+  .main-wrapper-item {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    text-align: center;
+    -webkit-transition: opacity .3s;
+    transition: opacity .3s; }
+    .main-wrapper-item .img-wrapp {
+      display: inline-block;
+      width: 50px;
+      height: 50px; }
+      .main-wrapper-item .img-wrapp img {
+        max-width: 100%;
+        max-height: 100%;
+        display: block; }
+    .main-wrapper-item .main-wrapper-item-text {
+      width: 100%;
+      display: block;
+      color: #fff;
+      margin-top: 20px; }
+  .main-wrapper-contact {
+    margin: 90px auto 100px; }
+  .main-wrapper-footer {
+    font-size: 0;
+    border-top: 1px solid #e6e6e6;
+    max-width: 1180px;
+    margin: 0 auto; }
+    .main-wrapper-footer .footer-right {
+      width: 300px;
+      display: block;
+      margin: 0 auto;
+      text-align: center; }
+      .main-wrapper-footer .footer-right .tel-wrap {
+        margin-top: 10px !important; }
+    .main-wrapper-footer .footer-footer-inner {
+      font-size: 0;
+      padding: 20px 0;
+      *zoom: 1; }
+      .main-wrapper-footer .footer-footer-inner:after {
+        content: " ";
+        display: table;
+        clear: both; }
+      .main-wrapper-footer .footer-footer-inner .footer-footer-desc, .main-wrapper-footer .footer-footer-inner .footer-footer-dev {
+        display: inline-block;
+        float: left; }
+      .main-wrapper-footer .footer-footer-inner .footer-footer-dev {
+        width: 66.66%; }
+      @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
 
   * {
     -webkit-text-size-adjust: none; } }
-  @media only screen and (max-width: 1870px) {
+      @media only screen and (max-width: 1870px) {
 
   .specialist-wrap .dots-wrap {
     padding-right: 17vw; }
 
   .specialist-wrap .wide-slider {
     margin-right: -17vw; } }
-  @media only screen and (max-width: 1700px) {
+      @media only screen and (max-width: 1700px) {
 
   .special .big-image-slider + .modal-container-content {
     margin-top: -4.375rem; }
 
   .special .modal-container-content {
     padding: 1.875rem 1.25rem; } }
-  @media only screen and (max-width: 1650px) {
+      @media only screen and (max-width: 1650px) {
 
   .big-image-item img {
     max-width: 25rem; } }
-  @media not all and (-moz-touch-enabled: 1), not all and (pointer: coarse), not all and (-ms-high-contrast: none) and (max-width: 600px) {
+      @media not all and (-moz-touch-enabled: 1), not all and (pointer: coarse), not all and (-ms-high-contrast: none) and (max-width: 600px) {
 
   .btn:hover {
     background-color: #d56c72;
@@ -5071,7 +5177,7 @@ a.text:active {
   .download-link:hover .text.primary {
     color: #d56c72;
     color: var(--color-secondary); } }
-  @media only screen and (max-width: 1500px) {
+      @media only screen and (max-width: 1500px) {
 
   .specialist-wrap .vrach-inner-block {
     padding-left: 0.9375rem;
@@ -5079,14 +5185,14 @@ a.text:active {
 
   .specialist-wrap .vrach-vrach-name {
     left: 0.9375rem; } }
-  @media only screen and (max-width: 1300px) {
+      @media only screen and (max-width: 1300px) {
 
   .specialist-wrap .wide-slider {
     margin-right: 0; }
 
   .map-wrapper {
     padding-bottom: 40%; } }
-  @media only screen and (max-width: 1220px) {
+      @media only screen and (max-width: 1220px) {
 
   .page__header.is-hidden .header-row-nav {
     padding-left: 1%; }
@@ -5100,26 +5206,26 @@ a.text:active {
 
   .page__header-drop-cont {
     padding-left: 15rem; } }
-  @media only screen and (max-width: 1200px) {
+      @media only screen and (max-width: 1200px) {
 
   .promoslider-wrap .index-slider-content {
     max-width: 28.125rem; }
 
   .partner {
     margin-right: -1.875rem; } }
-  @media only screen and (max-width: 1150px) {
+      @media only screen and (max-width: 1150px) {
 
   html {
     font-size: 15px; } }
-  @media only screen and (max-width: 1140px) {
+      @media only screen and (max-width: 1140px) {
 
   .page__header.is-hidden .page__header-drop-cont {
     padding-left: 7.5rem; } }
-  @media only screen and (max-width: 1130px) {
+      @media only screen and (max-width: 1130px) {
 
   .page__header.is-hidden .logo-inner-text {
     display: none; } }
-  @media only screen and (max-width: 1100px) {
+      @media only screen and (max-width: 1100px) {
 
   .footer-links-add:last-child {
     width: 53%; }
@@ -5129,7 +5235,7 @@ a.text:active {
 
   .index-slider .arr-wrap {
     right: 15.625rem; } }
-  @media only screen and (max-width: 1050px) {
+      @media only screen and (max-width: 1050px) {
 
   .header-row-tels .tel-wrap-inner:not(:first-child) {
     margin-left: 1.5625rem; }
@@ -5139,7 +5245,7 @@ a.text:active {
 
   .dropdown-inner:not(.spec) {
     padding: 1.875rem 1.5625rem; } }
-  @media only screen and (max-width: 1040px) {
+      @media only screen and (max-width: 1040px) {
 
   .aside-menu {
     width: 17.0625rem; }
@@ -5147,7 +5253,7 @@ a.text:active {
   .aside-content {
     width: -webkit-calc(100% - 17.0625rem);
     width: calc(100% - 17.0625rem); } }
-  @media only screen and (max-width: 1024px) {
+      @media only screen and (max-width: 1024px) {
 
   .header-row-top .nav-wrap {
     padding-left: 1%; }
@@ -5180,7 +5286,7 @@ a.text:active {
 
   .special .modal-container-content {
     margin-right: auto; } }
-  @media only screen and (max-width: 991px) {
+      @media only screen and (max-width: 991px) {
 
   .about-inner {
     padding-bottom: 1.875rem; }
@@ -5221,7 +5327,7 @@ a.text:active {
     -webkit-flex-basis: 0;
     -ms-flex-preferred-size: 0;
     flex-basis: 0; } }
-  @media only screen and (max-width: 970px) {
+      @media only screen and (max-width: 970px) {
 
   body.menu-open .header-row-tels .tel-wrap {
     min-width: 0 !important; }
@@ -5232,14 +5338,14 @@ a.text:active {
   .header-row-tels .tel-wrap .dropdown-target {
     width: 25rem;
     left: auto !important; } }
-  @media only screen and (min-width: 961px) {
+      @media only screen and (min-width: 961px) {
 
   .header-row-tels .tel-wrap-inner:last-child .tel-item svg {
     display: none; }
 
   .page__header:not(.is-hidden) .header-bottom-mobnav {
     display: none; } }
-  @media only screen and (max-width: 960px) {
+      @media only screen and (max-width: 960px) {
 
   body.menu-open .header-mainwrap {
     -webkit-transform: none !important;
@@ -5271,7 +5377,7 @@ a.text:active {
 
   .news-item {
     margin-bottom: 3.125rem; } }
-  @media only screen and (max-width: 930px) {
+      @media only screen and (max-width: 930px) {
 
   .footer-links-add {
     width: 37% !important; }
@@ -5281,11 +5387,11 @@ a.text:active {
 
   .mainmenu-inner .box .footer-links .footer-links-main {
     width: 35%; } }
-  @media only screen and (min-width: 901px) {
+      @media only screen and (min-width: 901px) {
 
   .aside-title {
     display: none; } }
-  @media only screen and (max-width: 900px) {
+      @media only screen and (max-width: 900px) {
 
   .index-slider {
     margin-right: -18.75rem; }
@@ -5340,11 +5446,11 @@ a.text:active {
 
   .content-wrapper h3 {
     margin: 2.8125rem 0 1.875rem; } }
-  @media only screen and (max-width: 850px) {
+      @media only screen and (max-width: 850px) {
 
   .news-wrapper-body .news-item {
     width: 50%; } }
-  @media only screen and (max-width: 820px) {
+      @media only screen and (max-width: 820px) {
 
   .header-row-bottom {
     height: 4.8125rem; }
@@ -5375,7 +5481,7 @@ a.text:active {
 
   .page-head {
     padding-top: 4.8125rem; } }
-  @media only screen and (max-width: 800px) {
+      @media only screen and (max-width: 800px) {
 
   .service-item-links li {
     width: 50%; }
@@ -5402,7 +5508,7 @@ a.text:active {
 
   .addnews-item {
     width: 100%; } }
-  @media only screen and (max-width: 780px) {
+      @media only screen and (max-width: 780px) {
 
   .page-head.eng .page-head-inner {
     width: 100%; }
@@ -5411,7 +5517,7 @@ a.text:active {
     width: 100%;
     padding-bottom: 2.5rem;
     padding-top: 1.25rem; } }
-  @media only screen and (max-width: 768px) {
+      @media only screen and (max-width: 768px) {
 
   .select-u-item .input-text {
     font-size: 0.8125rem; }
@@ -5421,7 +5527,7 @@ a.text:active {
 
   .col-wrapper .col-33 {
     width: 50%; } }
-  @media only screen and (min-width: 768px) {
+      @media only screen and (min-width: 768px) {
 
   .page__content::-webkit-scrollbar {
     width: 0.25rem; }
@@ -5431,14 +5537,14 @@ a.text:active {
     border-radius: 0.1875rem;
     background: #888888;
     cursor: pointer; } }
-  @media only screen and (min-width: 740px) {
+      @media only screen and (min-width: 740px) {
 
   .footer.eng .logo-wrap, .footer.eng .footer-links-main {
     width: 15%; }
 
   .footer.eng .footer-links-add {
     width: 60%; } }
-  @media only screen and (max-width: 740px) {
+      @media only screen and (max-width: 740px) {
 
   .footer.eng .footer-links-main {
     display: none; }
@@ -5534,15 +5640,15 @@ a.text:active {
     display: inline-block;
     vertical-align: top;
     width: 33.33%; } }
-  @media only screen and (max-width: 735px) {
+      @media only screen and (max-width: 735px) {
 
   .content-column-right {
     text-align: left; } }
-  @media only screen and (min-width: 701px) {
+      @media only screen and (min-width: 701px) {
 
   .footer.eng .footer-footer-dev {
     width: 66.66%; } }
-  @media only screen and (max-width: 700px) {
+      @media only screen and (max-width: 700px) {
 
   .footer-footer-inner {
     padding-top: 1.25rem;
@@ -5581,7 +5687,7 @@ a.text:active {
   .service-letters {
     overflow-x: auto;
     margin-top: 0.625rem; } }
-  @media only screen and (max-width: 630px) {
+      @media only screen and (max-width: 630px) {
 
   .promoslider-wrap .index-slider-btns-wrap {
     margin-left: auto;
@@ -5589,7 +5695,7 @@ a.text:active {
 
   .promoslider-wrap .index-slider-btns-wrap .btn {
     margin-bottom: 1rem; } }
-  @media only screen and (min-width: 601px) {
+      @media only screen and (min-width: 601px) {
 
   .mainmenu-inner .box .footer-right {
     -webkit-box-ordinal-group: 2;
@@ -5646,7 +5752,7 @@ a.text:active {
 
   ._404 .link-back {
     margin-top: 13.125rem; } }
-  @media only screen and (max-width: 600px) {
+      @media only screen and (max-width: 600px) {
 
   .btn.filter-item span {
     padding: 0.75rem 1.25rem; }
@@ -5959,7 +6065,7 @@ a.text:active {
 
   .news-wrapper-body .news-item {
     width: 100%; } }
-  @media only screen and (max-width: 550px) {
+      @media only screen and (max-width: 550px) {
 
   .header-mainwrap .top-link.primary .dropdown-target {
     right: -6.875rem;
@@ -5968,7 +6074,7 @@ a.text:active {
 
   .docsearch-container .vrach-wrap {
     width: 100%; } }
-  @media only screen and (max-width: 540px) {
+      @media only screen and (max-width: 540px) {
 
   .footer-right .tel-wrap {
     margin-top: 2.9375rem;
@@ -5988,7 +6094,7 @@ a.text:active {
 
   .tel-item:not(:last-child) {
     margin-bottom: 0.9375rem; } }
-  @media only screen and (max-width: 500px) {
+      @media only screen and (max-width: 500px) {
 
   .col-wrapper .col-50 .news-item, .col-wrapper .col-33 .news-item {
     margin-left: auto;
@@ -5996,11 +6102,11 @@ a.text:active {
 
   .col-wrapper .col-33 {
     width: 100%; } }
-  @media only screen and (min-width: 491px) {
+      @media only screen and (min-width: 491px) {
 
   .otdel .slider-counter {
     display: none; } }
-  @media only screen and (max-width: 490px) {
+      @media only screen and (max-width: 490px) {
 
   .otdel-slider-wrap .dots-wrap {
     display: none; }
@@ -6012,7 +6118,7 @@ a.text:active {
 
   .wide-slider {
     margin-right: 0; } }
-  @media only screen and (max-width: 480px) {
+      @media only screen and (max-width: 480px) {
 
   .header-row-bottom .logo {
     width: 3.4375rem;
@@ -6046,7 +6152,7 @@ a.text:active {
 
   .form {
     margin-right: -1.5625rem; } }
-  @media only screen and (max-width: 430px) {
+      @media only screen and (max-width: 430px) {
 
   .dropdown-content .spec-link {
     padding: 1.25rem 0.9375rem; }
@@ -6054,12 +6160,12 @@ a.text:active {
   .dropdown-content .spec-link-title {
     font-size: 1rem;
     margin-bottom: 0.625rem; } }
-  @media only screen and (max-width: 400px) {
+      @media only screen and (max-width: 400px) {
 
   .dropdown-content .content-block {
     width: 100%;
     margin-top: 0.9375rem; } }
-  @media only screen and (max-width: 380px) {
+      @media only screen and (max-width: 380px) {
 
   .box {
     padding-left: 0.9375rem;
@@ -6071,11 +6177,11 @@ a.text:active {
     -ms-transform: none;
     transform: none;
     max-width: 1000px; } }
-  @media only screen and (max-width: 360px) {
+      @media only screen and (max-width: 360px) {
 
   .header-mainwrap .top-link.primary {
     line-height: 2.625rem; } }
-  @media only screen and (max-width: 355px) {
+      @media only screen and (max-width: 355px) {
 
   .header-mainwrap .top-link.primary {
     padding-left: 0.8125rem;
@@ -6084,7 +6190,7 @@ a.text:active {
     height: 1.875rem;
     line-height: 1.75rem;
     margin-top: 0; } }
-  @media only screen and (max-width: 350px) {
+      @media only screen and (max-width: 350px) {
 
   .footer-right {
     width: 12.5rem; }
@@ -6102,7 +6208,7 @@ a.text:active {
   .footer-left {
     width: -webkit-calc(100% - 12.5rem);
     width: calc(100% - 12.5rem); } }
-  @media only screen and (max-width: 330px) {
+      @media only screen and (max-width: 330px) {
 
   .section-inner {
     padding: 1.3125rem 1.25rem 1.25rem; } }
